chore: #12 Retrofit to Java 8 Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>